--- a/C_gigas/code/16-cel-mox-blast.ipynb
+++ b/C_gigas/code/16-cel-mox-blast.ipynb
@@ -198,31 +198,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2RSSE.1c.1\tlcl|NW_011936910.1_cds_XP_011450162.2_28992\t7.49e-10\trga-9\n",
-      "4R79.1a.1\tlcl|NW_011937731.1_cds_XP_011415613.1_39140\t1.73e-39\tnas-6\n",
-      "4R79.1a.1\tlcl|NW_011937731.1_cds_XP_011415614.1_39139\t1.73e-39\tnas-6\n",
-      "4R79.1a.1\tlcl|NW_011937768.1_cds_XP_011416407.1_39857\t2.74e-38\tnas-6\n",
-      "4R79.1a.1\tlcl|NW_011935585.1_cds_XP_011432046.1_12365\t7.03e-42\tnas-6\n",
-      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919232.1_38476\t1.06e-62\t4R79.2\n",
-      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_011414883.1_38482\t2.32e-62\t4R79.2\n",
-      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919229.1_38478\t2.32e-62\t4R79.2\n",
-      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919230.1_38479\t2.32e-62\t4R79.2\n",
-      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919231.1_38480\t2.32e-62\t4R79.2\n",
-      "join: stdout: Broken pipe\n"
+      "ZK994.3.1\tlcl|NW_011936606.1_cds_XP_011446896.1_26003\t1.18e-06\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011936606.1_cds_XP_011446897.1_26005\t1.21e-06\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011935420.1_cds_XP_019923639.1_10616\t1.40e-17\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011937212.1_cds_XP_011454917.1_33410\t1.41e-16\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011937212.1_cds_XP_011454915.1_33411\t1.83e-16\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011937212.1_cds_XP_011454916.1_33412\t1.83e-16\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011935589.1_cds_XP_019924228.1_12546\t2.53e-10\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011936252.1_cds_XP_019927060.1_21499\t4.04e-10\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011942010.1_cds_XP_011421780.1_44796\t6.88e-08\tpxn-1\n",
+      "ZK994.3.1\tlcl|NW_011936606.1_cds_XP_019928347.1_26004\t9.84e-07\tpxn-1\n"
      ]
     }
    ],
    "source": [
     "!join -1 2 -2 1 -t $'\\t' \\\n",
     "../analyses/Cg-WBcel235_blastx.sorted \\\n",
-    "../analyses/Caenorhabditis_elegans.WBcel235.gene.sym.sorted | head"
+    "../analyses/Caenorhabditis_elegans.WBcel235.gene.sym.sorted | tail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!join -1 2 -2 1 -t $'\\t' \\\n",
+    "../analyses/Cg-WBcel235_blastx.sorted \\\n",
+    "../analyses/Caenorhabditis_elegans.WBcel235.gene.sym.sorted \\\n",
+    "> ../analyses/Cg_Ce-genesym.tab"
    ]
   },
   {
