--- a/O_lurida/code/01-Quant-seq.ipynb
+++ b/O_lurida/code/01-Quant-seq.ipynb
@@ -1,6 +1,77 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/sr320/Documents/GitHub/nb-2021/O_lurida/data\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd ../data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: wget\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -r \\\n",
+    "--no-directories --no-parent \\\n",
+    "--no-check-certificate \\\n",
+    "-P . \\\n",
+    "-A .fastq https://gannet.fish.washington.edu/generosa/O.lurida_QuantSeq2020/Trimmed/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34.trim.fastq\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
