--- a/O_lurida/code/01-Quant-seq.ipynb
+++ b/O_lurida/code/01-Quant-seq.ipynb
@@ -34,20 +34,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: command not found: wget\n"
-     ]
-    }
-   ],
    "source": [
-    "!wget -r \\\n",
+    "wget -r \\\n",
     "--no-directories --no-parent \\\n",
     "--no-check-certificate \\\n",
     "-P . \\\n",
@@ -56,19 +46,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34.trim.fastq\n"
+      "137.trim.fastq 156.trim.fastq 34.trim.fastq  41.trim.fastq  46.trim.fastq\n",
+      "139.trim.fastq 159.trim.fastq 35.trim.fastq  43.trim.fastq  47.trim.fastq\n",
+      "140.trim.fastq 161.trim.fastq 37.trim.fastq  44.trim.fastq\n",
+      "141.trim.fastq 162.trim.fastq 39.trim.fastq  45.trim.fastq\n"
      ]
     }
    ],
    "source": [
     "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: bowtie\n"
+     ]
+    }
+   ],
+   "source": [
+    "!bowtie\n"
    ]
   },
   {
