--- a/O_lurida/code/02-Quant-seq.ipynb
+++ b/O_lurida/code/02-Quant-seq.ipynb
@@ -1036,7 +1036,438 @@
       "  bucket 39: 40%\n",
       "  bucket 41: 30%\n",
       "  bucket 37: 50%\n",
-      "  bucket 42: 30%\n"
+      "  bucket 42: 30%\n",
+      "  bucket 36: 70%\n",
+      "  bucket 38: 50%\n",
+      "  bucket 39: 50%\n",
+      "  bucket 41: 40%\n",
+      "  bucket 40: 40%\n",
+      "  bucket 37: 60%\n",
+      "  bucket 42: 40%\n",
+      "  bucket 36: 80%\n",
+      "  bucket 38: 60%\n",
+      "  bucket 39: 60%\n",
+      "  bucket 37: 70%\n",
+      "  bucket 41: 50%\n",
+      "  bucket 42: 50%\n",
+      "  bucket 40: 50%\n",
+      "  bucket 36: 90%\n",
+      "  bucket 38: 70%\n",
+      "  bucket 39: 70%\n",
+      "  bucket 37: 80%\n",
+      "  bucket 41: 60%\n",
+      "  bucket 42: 60%\n",
+      "  bucket 40: 60%\n",
+      "  bucket 36: 100%\n",
+      "  Sorting block of length 21333788 for bucket 36\n",
+      "  (Using difference cover)\n",
+      "  bucket 38: 80%\n",
+      "  bucket 39: 80%\n",
+      "  bucket 37: 90%\n",
+      "  bucket 42: 70%\n",
+      "  bucket 41: 70%\n",
+      "  bucket 40: 70%\n",
+      "  bucket 38: 90%\n",
+      "  bucket 39: 90%\n",
+      "  bucket 37: 100%\n",
+      "  Sorting block of length 15645687 for bucket 37\n",
+      "  (Using difference cover)\n",
+      "  bucket 42: 80%\n",
+      "  bucket 41: 80%\n",
+      "  bucket 38: 100%\n",
+      "  Sorting block of length 10973099 for bucket 38\n",
+      "  (Using difference cover)\n",
+      "  bucket 40: 80%\n",
+      "  Sorting block time: 00:00:05\n",
+      "Returning block of 21333789 for bucket 36\n",
+      "  bucket 39: 100%\n",
+      "  Sorting block of length 23397444 for bucket 39\n",
+      "  (Using difference cover)\n",
+      "  bucket 41: 90%\n",
+      "  bucket 42: 90%\n",
+      "Getting block 43 of 59\n",
+      "  Reserving size (25248166) for bucket 43\n",
+      "  Calculating Z arrays for bucket 43\n",
+      "  Entering block accumulator loop for bucket 43:\n",
+      "  bucket 40: 90%\n",
+      "  Sorting block time: 00:00:03\n",
+      "Returning block of 10973100 for bucket 38\n",
+      "  Sorting block time: 00:00:04\n",
+      "Returning block of 15645688 for bucket 37\n",
+      "Getting block 44 of 59\n",
+      "  Reserving size (25248166) for bucket 44\n",
+      "  Calculating Z arrays for bucket 44\n",
+      "  Entering block accumulator loop for bucket 44:\n",
+      "Getting block 45 of 59\n",
+      "  Reserving size (25248166) for bucket 45\n",
+      "  Calculating Z arrays for bucket 45\n",
+      "  Entering block accumulator loop for bucket 45:\n",
+      "  bucket 42: 100%\n",
+      "  Sorting block of length 17693709 for bucket 42\n",
+      "  (Using difference cover)\n",
+      "  bucket 43: 10%\n",
+      "  bucket 41: 100%\n",
+      "  Sorting block of length 18460410 for bucket 41\n",
+      "  (Using difference cover)\n",
+      "  bucket 40: 100%\n",
+      "  Sorting block of length 15383856 for bucket 40\n",
+      "  (Using difference cover)\n",
+      "  bucket 44: 10%\n",
+      "  bucket 43: 20%\n",
+      "  bucket 45: 10%\n",
+      "  Sorting block time: 00:00:06\n",
+      "Returning block of 23397445 for bucket 39\n",
+      "Getting block 46 of 59\n",
+      "  Reserving size (25248166) for bucket 46\n",
+      "  Calculating Z arrays for bucket 46\n",
+      "  Entering block accumulator loop for bucket 46:\n",
+      "  bucket 44: 20%\n",
+      "  Sorting block time: 00:00:05\n",
+      "Returning block of 17693710 for bucket 42\n",
+      "  Sorting block time: 00:00:05\n",
+      "Returning block of 18460411 for bucket 41\n",
+      "  bucket 43: 30%\n",
+      "  bucket 45: 20%\n",
+      "  Sorting block time: 00:00:05\n",
+      "Returning block of 15383857 for bucket 40\n",
+      "Getting block 47 of 59\n",
+      "  Reserving size (25248166) for bucket 47\n",
+      "  Calculating Z arrays for bucket 47\n",
+      "  Entering block accumulator loop for bucket 47:\n",
+      "Getting block 48 of 59\n",
+      "  Reserving size (25248166) for bucket 48\n",
+      "  Calculating Z arrays for bucket 48\n",
+      "  Entering block accumulator loop for bucket 48:\n",
+      "Getting block 49 of 59\n",
+      "  Reserving size (25248166) for bucket 49\n",
+      "  Calculating Z arrays for bucket 49\n",
+      "  Entering block accumulator loop for bucket 49:\n",
+      "  bucket 46: 10%\n",
+      "  bucket 44: 30%\n",
+      "  bucket 43: 40%\n",
+      "  bucket 45: 30%\n",
+      "  bucket 48: 10%\n",
+      "  bucket 47: 10%\n",
+      "  bucket 49: 10%\n",
+      "  bucket 44: 40%\n",
+      "  bucket 46: 20%\n",
+      "  bucket 43: 50%\n",
+      "  bucket 45: 40%\n",
+      "  bucket 47: 20%\n",
+      "  bucket 48: 20%\n",
+      "  bucket 49: 20%\n",
+      "  bucket 44: 50%\n",
+      "  bucket 46: 30%\n",
+      "  bucket 43: 60%\n",
+      "  bucket 45: 50%\n",
+      "  bucket 47: 30%\n",
+      "  bucket 48: 30%\n",
+      "  bucket 49: 30%\n",
+      "  bucket 44: 60%\n",
+      "  bucket 46: 40%\n",
+      "  bucket 43: 70%\n",
+      "  bucket 45: 60%\n",
+      "  bucket 47: 40%\n",
+      "  bucket 48: 40%\n",
+      "  bucket 49: 40%\n",
+      "  bucket 44: 70%\n",
+      "  bucket 46: 50%\n",
+      "  bucket 43: 80%\n",
+      "  bucket 45: 70%\n",
+      "  bucket 47: 50%\n",
+      "  bucket 48: 50%\n",
+      "  bucket 44: 80%\n",
+      "  bucket 49: 50%\n",
+      "  bucket 46: 60%\n",
+      "  bucket 43: 90%\n",
+      "  bucket 45: 80%\n",
+      "  bucket 47: 60%\n",
+      "  bucket 44: 90%\n",
+      "  bucket 48: 60%\n",
+      "  bucket 49: 60%\n",
+      "  bucket 46: 70%\n",
+      "  bucket 43: 100%\n",
+      "  Sorting block of length 23716207 for bucket 43\n",
+      "  (Using difference cover)\n",
+      "  bucket 45: 90%\n",
+      "  bucket 44: 100%\n",
+      "  Sorting block of length 10821533 for bucket 44\n",
+      "  (Using difference cover)\n",
+      "  bucket 47: 70%\n",
+      "  bucket 48: 70%\n",
+      "  bucket 49: 70%\n",
+      "  bucket 46: 80%\n",
+      "  bucket 45: 100%\n",
+      "  Sorting block of length 20554306 for bucket 45\n",
+      "  (Using difference cover)\n",
+      "  bucket 47: 80%\n",
+      "  bucket 49: 80%\n",
+      "  bucket 48: 80%\n",
+      "  Sorting block time: 00:00:03\n",
+      "Returning block of 10821534 for bucket 44\n",
+      "  bucket 46: 90%\n",
+      "Getting block 50 of 59\n",
+      "  Reserving size (25248166) for bucket 50\n",
+      "  Calculating Z arrays for bucket 50\n",
+      "  Entering block accumulator loop for bucket 50:\n",
+      "  bucket 47: 90%\n",
+      "  bucket 49: 90%\n",
+      "  bucket 48: 90%\n",
+      "  bucket 46: 100%\n",
+      "  Sorting block of length 7815363 for bucket 46\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:06\n",
+      "Returning block of 23716208 for bucket 43\n",
+      "  bucket 50: 10%\n",
+      "Getting block 51 of 59\n",
+      "  Reserving size (25248166) for bucket 51\n",
+      "  Calculating Z arrays for bucket 51\n",
+      "  Entering block accumulator loop for bucket 51:\n",
+      "  bucket 47: 100%\n",
+      "  Sorting block of length 21977571 for bucket 47\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:02\n",
+      "Returning block of 7815364 for bucket 46\n",
+      "  bucket 49: 100%\n",
+      "  Sorting block of length 21076245 for bucket 49\n",
+      "  (Using difference cover)\n",
+      "  bucket 48: 100%\n",
+      "  Sorting block of length 24859881 for bucket 48\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:05\n",
+      "Returning block of 20554307 for bucket 45\n",
+      "Getting block 52 of 59\n",
+      "  Reserving size (25248166) for bucket 52\n",
+      "  Calculating Z arrays for bucket 52\n",
+      "  Entering block accumulator loop for bucket 52:\n",
+      "  bucket 50: 20%\n",
+      "Getting block 53 of 59\n",
+      "  Reserving size (25248166) for bucket 53\n",
+      "  Calculating Z arrays for bucket 53\n",
+      "  Entering block accumulator loop for bucket 53:\n",
+      "  bucket 51: 10%\n",
+      "  bucket 52: 10%\n",
+      "  bucket 50: 30%\n",
+      "  bucket 53: 10%\n",
+      "  bucket 51: 20%\n",
+      "  Sorting block time: 00:00:07\n",
+      "Returning block of 21977572 for bucket 47\n",
+      "  Sorting block time: 00:00:07\n",
+      "Returning block of 21076246 for bucket 49\n",
+      "  bucket 52: 20%\n",
+      "  bucket 50: 40%\n",
+      "  bucket 53: 20%\n",
+      "Getting block 54 of 59\n",
+      "  Reserving size (25248166) for bucket 54\n",
+      "  Calculating Z arrays for bucket 54\n",
+      "  Entering block accumulator loop for bucket 54:\n",
+      "Getting block 55 of 59\n",
+      "  Reserving size (25248166) for bucket 55\n",
+      "  Calculating Z arrays for bucket 55\n",
+      "  Entering block accumulator loop for bucket 55:\n",
+      "  Sorting block time: 00:00:08\n",
+      "Returning block of 24859882 for bucket 48\n",
+      "  bucket 51: 30%\n",
+      "Getting block 56 of 59\n",
+      "  Reserving size (25248166) for bucket 56\n",
+      "  Calculating Z arrays for bucket 56\n",
+      "  Entering block accumulator loop for bucket 56:\n",
+      "  bucket 52: 30%\n",
+      "  bucket 50: 50%\n",
+      "  bucket 53: 30%\n",
+      "  bucket 54: 10%\n",
+      "  bucket 55: 10%\n",
+      "  bucket 51: 40%\n",
+      "  bucket 56: 10%\n",
+      "  bucket 52: 40%\n",
+      "  bucket 50: 60%\n",
+      "  bucket 53: 40%\n",
+      "  bucket 54: 20%\n",
+      "  bucket 55: 20%\n",
+      "  bucket 51: 50%\n",
+      "  bucket 56: 20%\n",
+      "  bucket 52: 50%\n",
+      "  bucket 50: 70%\n",
+      "  bucket 54: 30%\n",
+      "  bucket 53: 50%\n",
+      "  bucket 55: 30%\n",
+      "  bucket 51: 60%\n",
+      "  bucket 56: 30%\n",
+      "  bucket 52: 60%\n",
+      "  bucket 50: 80%\n",
+      "  bucket 54: 40%\n",
+      "  bucket 53: 60%\n",
+      "  bucket 55: 40%\n",
+      "  bucket 51: 70%\n",
+      "  bucket 56: 40%\n",
+      "  bucket 52: 70%\n",
+      "  bucket 50: 90%\n",
+      "  bucket 54: 50%\n",
+      "  bucket 53: 70%\n",
+      "  bucket 55: 50%\n",
+      "  bucket 56: 50%\n",
+      "  bucket 51: 80%\n",
+      "  bucket 52: 80%\n",
+      "  bucket 50: 100%\n",
+      "  Sorting block of length 12117388 for bucket 50\n",
+      "  (Using difference cover)\n",
+      "  bucket 54: 60%\n",
+      "  bucket 53: 80%\n",
+      "  bucket 55: 60%\n",
+      "  bucket 56: 60%\n",
+      "  bucket 51: 90%\n",
+      "  bucket 52: 90%\n",
+      "  bucket 54: 70%\n",
+      "  bucket 53: 90%\n",
+      "  bucket 55: 70%\n",
+      "  Sorting block time: 00:00:03\n",
+      "Returning block of 12117389 for bucket 50\n",
+      "  bucket 56: 70%\n",
+      "  bucket 51: 100%\n",
+      "  Sorting block of length 20042929 for bucket 51\n",
+      "  (Using difference cover)\n",
+      "Getting block 57 of 59\n",
+      "  Reserving size (25248166) for bucket 57\n",
+      "  Calculating Z arrays for bucket 57\n",
+      "  Entering block accumulator loop for bucket 57:\n",
+      "  bucket 52: 100%\n",
+      "  Sorting block of length 12185793 for bucket 52\n",
+      "  (Using difference cover)\n",
+      "  bucket 54: 80%\n",
+      "  bucket 53: 100%\n",
+      "  Sorting block of length 25037652 for bucket 53\n",
+      "  (Using difference cover)\n",
+      "  bucket 55: 80%\n",
+      "  bucket 56: 80%\n",
+      "  bucket 57: 10%\n",
+      "  Sorting block time: 00:00:03\n",
+      "Returning block of 12185794 for bucket 52\n",
+      "  bucket 54: 90%\n",
+      "Getting block 58 of 59\n",
+      "  Reserving size (25248166) for bucket 58\n",
+      "  Calculating Z arrays for bucket 58\n",
+      "  Entering block accumulator loop for bucket 58:\n",
+      "  bucket 55: 90%\n",
+      "  bucket 56: 90%\n",
+      "  bucket 57: 20%\n",
+      "  Sorting block time: 00:00:05\n",
+      "Returning block of 20042930 for bucket 51\n",
+      "  bucket 54: 100%\n",
+      "  Sorting block of length 13367001 for bucket 54\n",
+      "  (Using difference cover)\n",
+      "  bucket 58: 10%\n",
+      "  bucket 55: 100%\n",
+      "  Sorting block of length 20956898 for bucket 55\n",
+      "  (Using difference cover)\n",
+      "Getting block 59 of 59\n",
+      "  Reserving size (25248166) for bucket 59\n",
+      "  Calculating Z arrays for bucket 59\n",
+      "  Entering block accumulator loop for bucket 59:\n",
+      "  bucket 56: 100%\n",
+      "  Sorting block of length 7524981 for bucket 56\n",
+      "  (Using difference cover)\n",
+      "  bucket 57: 30%\n",
+      "  bucket 59: 10%\n",
+      "  Sorting block time: 00:00:07\n",
+      "Returning block of 25037653 for bucket 53\n",
+      "  bucket 58: 20%\n",
+      "  Sorting block time: 00:00:02\n",
+      "Returning block of 7524982 for bucket 56\n",
+      "  Sorting block time: 00:00:04\n",
+      "Returning block of 13367002 for bucket 54\n",
+      "  bucket 59: 20%\n",
+      "  bucket 57: 40%\n",
+      "  bucket 59: 30%\n",
+      "  bucket 58: 30%\n",
+      "  Sorting block time: 00:00:06\n",
+      "Returning block of 20956899 for bucket 55\n",
+      "  bucket 57: 50%\n",
+      "  bucket 59: 40%\n",
+      "  bucket 58: 40%\n",
+      "  bucket 59: 50%\n",
+      "  bucket 57: 60%\n",
+      "  bucket 59: 60%\n",
+      "  bucket 58: 50%\n",
+      "  bucket 57: 70%\n",
+      "  bucket 59: 70%\n",
+      "  bucket 58: 60%\n",
+      "  bucket 59: 80%\n",
+      "  bucket 57: 80%\n",
+      "  bucket 58: 70%\n",
+      "  bucket 59: 90%\n",
+      "  bucket 57: 90%\n",
+      "  bucket 59: 100%\n",
+      "  Sorting block of length 24028122 for bucket 59\n",
+      "  (Using difference cover)\n",
+      "  bucket 58: 80%\n",
+      "  bucket 57: 100%\n",
+      "  Sorting block of length 23089971 for bucket 57\n",
+      "  (Using difference cover)\n",
+      "  bucket 58: 90%\n",
+      "  bucket 58: 100%\n",
+      "  Sorting block of length 15974712 for bucket 58\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:04\n",
+      "Returning block of 24028123 for bucket 59\n",
+      "  Sorting block time: 00:00:04\n",
+      "Returning block of 23089972 for bucket 57\n",
+      "  Sorting block time: 00:00:03\n",
+      "Returning block of 15974713 for bucket 58\n",
+      "Exited Ebwt loop\n",
+      "fchr[A]: 0\n",
+      "fchr[C]: 341519526\n",
+      "fchr[G]: 538577822\n",
+      "fchr[T]: 735626959\n",
+      "fchr[$]: 1077255099\n",
+      "Exiting Ebwt::buildToDisk()\n",
+      "Returning from initFromVector\n",
+      "Wrote 371984998 bytes to primary EBWT file: ../data/Olurida_v081-bowtie-index.1.bt2\n",
+      "Wrote 269313780 bytes to secondary EBWT file: ../data/Olurida_v081-bowtie-index.2.bt2\n",
+      "Re-opening _in1 and _in2 as input streams\n",
+      "Returning from Ebwt constructor\n",
+      "Headers:\n",
+      "    len: 1077255099\n",
+      "    bwtLen: 1077255100\n",
+      "    sz: 269313775\n",
+      "    bwtSz: 269313775\n",
+      "    lineRate: 6\n",
+      "    offRate: 4\n",
+      "    offMask: 0xfffffff0\n",
+      "    ftabChars: 10\n",
+      "    eftabLen: 20\n",
+      "    eftabSz: 80\n",
+      "    ftabLen: 1048577\n",
+      "    ftabSz: 4194308\n",
+      "    offsLen: 67328444\n",
+      "    offsSz: 269313776\n",
+      "    lineSz: 64\n",
+      "    sideSz: 64\n",
+      "    sideBwtSz: 48\n",
+      "    sideBwtLen: 192\n",
+      "    numSides: 5610704\n",
+      "    numLines: 5610704\n",
+      "    ebwtTotLen: 359085056\n",
+      "    ebwtTotSz: 359085056\n",
+      "    color: 0\n",
+      "    reverse: 0\n",
+      "Total time for call to driver() for forward index: 00:05:17\n",
+      "Reading reference sizes\n",
+      "  Time reading reference sizes: 00:00:05\n",
+      "Calculating joined length\n",
+      "Writing header\n",
+      "Reserving space for joined string\n",
+      "Joining reference sequences\n",
+      "  Time to join reference sequences: 00:00:05\n",
+      "  Time to reverse reference sequence: 00:00:00\n",
+      "bmax according to bmaxDivN setting: 33664221\n",
+      "Using parameters --bmax 25248166 --dcv 1024\n",
+      "  Doing ahead-of-time memory usage test\n",
+      "  Passed!  Constructing with these parameters: --bmax 25248166 --dcv 1024\n",
+      "Constructing suffix-array element generator\n",
+      "Building DifferenceCoverSample\n",
+      "  Building sPrime\n",
+      "  Building sPrimeOrder\n",
+      "  V-Sorting samples\n"
      ]
     }
    ],
