--- a/C_gigas/code/16-cel-mox-blast.ipynb
+++ b/C_gigas/code/16-cel-mox-blast.ipynb
@@ -238,6 +238,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2RSSE.1c.1\tlcl|NW_011936910.1_cds_XP_011450162.2_28992\t7.49e-10\trga-9\n",
+      "4R79.1a.1\tlcl|NW_011937731.1_cds_XP_011415613.1_39140\t1.73e-39\tnas-6\n",
+      "4R79.1a.1\tlcl|NW_011937731.1_cds_XP_011415614.1_39139\t1.73e-39\tnas-6\n",
+      "4R79.1a.1\tlcl|NW_011937768.1_cds_XP_011416407.1_39857\t2.74e-38\tnas-6\n",
+      "4R79.1a.1\tlcl|NW_011935585.1_cds_XP_011432046.1_12365\t7.03e-42\tnas-6\n",
+      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919232.1_38476\t1.06e-62\t4R79.2\n",
+      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_011414883.1_38482\t2.32e-62\t4R79.2\n",
+      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919229.1_38478\t2.32e-62\t4R79.2\n",
+      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919230.1_38479\t2.32e-62\t4R79.2\n",
+      "4R79.2b.1\tlcl|NW_011937663.1_cds_XP_019919231.1_38480\t2.32e-62\t4R79.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head ../analyses/Cg_Ce-genesym.tab"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
