--- a/C_gigas/code/21-Spur-blast-again.ipynb
+++ b/C_gigas/code/21-Spur-blast-again.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +32,23 @@
     "-max_target_seqs 1 \\\n",
     "-max_hsps 1 \\\n",
     "-outfmt \"6 qaccver saccver evalue\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   34534 ../analyses/Cg-ProteinsSpur5.0_blastx_02.tab\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wc -l ../analyses/Cg-ProteinsSpur5.0_blastx_02.tab"
    ]
   },
   {
