--- a/C_gigas/code/21-Spur-blast-again.ipynb
+++ b/C_gigas/code/21-Spur-blast-again.ipynb
@@ -56,7 +56,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "went ahead and removed limite all together on mox"
+   ]
   }
  ],
  "metadata": {
